--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="section">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <p class="points-text" id="guest-points">0</p>
                 <div class="buttons-wrapper">
                     <button onclick="addGuest1()" id="guest-1-btn">+1</button>
